pc版メニューバーのブラッシュアップ

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="background: url(images/green.jpg)">
     <!--メニュー一覧を表示するナビゲーションを作成-->
     <header>
-        <div class="pc-gnav" style="background: url(images/pc-nav.jpg)">
+        <div class="pc-gnav">
              <ul>
                 <li><a href="#">Top</a></li>
                 <li>
