hobbyコンテンツのアニメーション完成

--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
             <!--自分の趣味について-->
             <div id="hobby" class="content">
                 <div class="h">My hobby</div>
-                <img src="images/cook1.jpg" alt="手料理の写真" class="cook">
+                <div id="fadein_fadeout">
+                    <img src="images/cook0.jpg" alt="一番目の料理の写真">
+                </div>
+                
                 <p>趣味は料理です。妻と一緒にたくさん作っています。</p>
                 <p>得意料理は、炊き込みご飯、餃子などです。</p>
                 <p>スローフードを流行らせたくて始めました。</p>
