スクロールイベントの作成途中

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
             <!--自分について-->
             <div id="me" class="content">
                 <div class="hm">About me</div>
-                <p>愛知県名古屋市出身。</p>
-                <p>南山大学法学部出身。</p>
+                <img src="images/myface.jpg" alt="自分のイメージ画像" class="myface"></img>
+                <p>愛知県名古屋市出身。南山大学法学部出身。</p>
                 <p>2015年3月に卒業し、あいち福祉医療専門学校へ進学。</p>
                 <p>2016年3月に精神保健福祉士の資格を取得。</p>
-                <p>精神科病院の相談員などに、５年従事。</p>
+                <p>2016年4月より、精神科病院の相談員などに５年従事。</p>
                 <p>2021年8月末、結婚を機に退職。妻が住む福岡県へ移住。</p>
                 <p>アナログ業務を経験する中で、DX化の推進に興味を持つ。</p>
                 <p>Webエンジニアへの転職を志す。</p>
@@ -144,8 +144,7 @@
                 
                 <p>趣味は料理です。妻と一緒にたくさん作っています。</p>
                 <p>得意料理は、炊き込みご飯、餃子などです。</p>
-                <p>スローフードを流行らせたくて始めました。</p>
-                <p>どうぞ、ご覧ください。</p>
+                <p>食の健康を意識するようになり、スローフードに興味を持ちました。</p>
             </div>
             
             <!--連絡先-->
