HTMLのコードミスの修正

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!--自分について-->
             <div id="me" class="content">
                 <div class="hm">About me</div>
-                <img src="images/myface.jpg" alt="自分のイメージ画像" class="myface"></img>
+                <img src="images/myface.jpg" alt="自分のイメージ画像" class="myface">
                 <p>愛知県名古屋市出身。南山大学法学部出身。</p>
                 <p>2015年3月に卒業し、あいち福祉医療専門学校へ進学。</p>
                 <p>2016年3月に精神保健福祉士の資格を取得。</p>
