My skill set コンテンツをBootstrapで加工

--- a/index.html
+++ b/index.html
@@ -116,16 +116,72 @@
             <div id="skill" class="content">
                <div class="h">My skill set</div>
                 <img src="images/skill.jpg" alt="スキルの画像" class="tech">
-                <p>HTML5/CSS(使用歴3か月)★★★<p>
-                <p>Javascript/jQuery(使用歴2か月)★★</p>
-                <p>PHP(使用歴1か月)★</p>
-                <br><br>
-                <p>- スキルの見方 -</p>
-                <p>★基礎構文は学習済み</P>
-                <p>★★基礎構文を応用して簡単なサンプルプログラムを実装できる</p>
-                <p>★★★　この技術を用いてオリジナルアプリを構築できる</p>
-                <p>★★★★　実務でこの技術を使った経験がある</p>
-                <p>★★★★★　この技術に関して他人に指導できる</p>
+                <div class="container mb-3 col-sm-8">
+                    <div class="row mt-3 mb-3">
+                        <p>スキル一覧</p>
+                        <table class="table table-bordered table-striped ">
+                            <tr>
+                                <th>プログラミング</th>
+                                <th>使用歴</th>
+                                <th>技術レベル</th>
+                            </tr>
+                            <tr>
+                                <td>HTML/CSS</td>
+                                <td>3か月</td>
+                                <td>★★★</td>
+                            </tr>
+                            <tr>
+                                <td>Javascript/jQuery</td>
+                                <td>2か月</td>
+                                <td>★★</td>
+                            </tr>
+                            <tr>
+                                <td>PHP</td>
+                                <td>2か月</td>
+                                <td>★★</td>
+                            </tr>
+                            <tr>
+                                <td>MySQL</td>
+                                <td>1か月</td>
+                                <td>★</td>
+                            </tr>
+                            <tr>
+                                <td>Bootstrap</td>
+                                <td>1か月</td>
+                                <td>★</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="row mt-5">
+                        <p>スキルの見方</p>
+                        <table class="table table-bordered table-striped ">
+                            <tr>
+                                <th>星の数</th>
+                                <th>説明</th>
+                            </tr>
+                            <tr>
+                                <td>★</td>
+                                <td>基礎構文は学習済み</td>
+                            </tr>
+                            <tr>
+                                <td>★★</td>
+                                <td>基礎構文を応用して簡単なサンプルプログラムを実装できる</td>
+                            </tr>
+                            <tr>
+                                <td>★★★</td>
+                                <td>この技術を用いてオリジナルアプリを構築できる</td>
+                            </tr>
+                            <tr>
+                                <td>★★★★</td>
+                                <td>実務でこの技術を使った経験がある</td>
+                            </tr>
+                            <tr>
+                                <td>★★★★★</td>
+                                <td>この技術に関して他人に指導できる</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
             
             <!--プロフィールについて-->
