--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
                 </div>
                 
                 <div id="mask" class="hidden"></div>
-                <section id="modal" class="hidden">
+                <div id="modal" class="hidden">
                     <p><a href="">1. アニメーション(jQuery)</a></p>
                     <p><a href="">2. 新規ユーザー登録アプリ(PHP, MySQL)</a></p>
                     <p><a href="">3. 相談記録アプリ(PHP, MySQL)</a></p>
                     <div id="close_2">
                         Close
                     </div>
-                </section>
+                </div>
             </div>
             
             <!--自分のスキルについて-->
@@ -118,9 +118,9 @@
                 <img src="images/skill.jpg" alt="スキルの画像" class="tech">
                 <div class="container mb-3 col-sm-8">
                     <div class="row mt-3 mb-3">
-                        <p>スキル一覧</p>
-                        <table class="table table-bordered table-striped ">
-                            <tr>
+                        <p class="text-success">スキル一覧</p>
+                        <table id="list" class="table table-bordered">
+                            <tr class="table-success">
                                 <th>プログラミング</th>
                                 <th>使用歴</th>
                                 <th>技術レベル</th>
@@ -130,7 +130,7 @@
                                 <td>3か月</td>
                                 <td>★★★</td>
                             </tr>
-                            <tr>
+                            <tr class="table-success">
                                 <td>Javascript/jQuery</td>
                                 <td>2か月</td>
                                 <td>★★</td>
@@ -140,7 +140,7 @@
                                 <td>2か月</td>
                                 <td>★★</td>
                             </tr>
-                            <tr>
+                            <tr class="table-success">
                                 <td>MySQL</td>
                                 <td>1か月</td>
                                 <td>★</td>
@@ -153,9 +153,9 @@
                         </table>
                     </div>
                     <div class="row mt-5">
-                        <p>スキルの見方</p>
-                        <table class="table table-bordered table-striped ">
-                            <tr>
+                        <p class="text-success">スキルの見方</p>
+                        <table class="table table-bordered">
+                            <tr class="table-success">
                                 <th>星の数</th>
                                 <th>説明</th>
                             </tr>
@@ -163,7 +163,7 @@
                                 <td>★</td>
                                 <td>基礎構文は学習済み</td>
                             </tr>
-                            <tr>
+                            <tr class="table-success">
                                 <td>★★</td>
                                 <td>基礎構文を応用して簡単なサンプルプログラムを実装できる</td>
                             </tr>
@@ -171,7 +171,7 @@
                                 <td>★★★</td>
                                 <td>この技術を用いてオリジナルアプリを構築できる</td>
                             </tr>
-                            <tr>
+                            <tr class="table-success">
                                 <td>★★★★</td>
                                 <td>実務でこの技術を使った経験がある</td>
                             </tr>
