--- a/index.html
+++ b/index.html
@@ -201,53 +201,76 @@
                                 
                             </tr>
                             <tr class="table-success">
-                                <td>1999年4月~(小学校時代)</td>
-                                <td>祖母の影響で民謡を習う。64ゲームが大好きだった。</td>
+                                <td>
+                                    1999年4月~<br>
+                                    小学校時代
+                                </td>
+                                <td>祖母の影響で民謡を習う。ポケモンが大好きだった。</td>
                             </tr>
                             <tr>
-                                <td>2005年4月~(中学時代)</td>
+                                <td>
+                                    2005年4月~<br>
+                                    中学時代
+                                </td>
                                 <td>声変わりをきっかけに合唱にハマる。</td>
                             </tr>
                             <tr class="table-success">
-                                <td>2008年4月~(高校時代)</td>
+                                <td>
+                                    2008年4月~<br>
+                                    高校時代
+                                </td>
                                 <td>
                                     大学進学のため、勉強漬の毎日。自転車通学で、毎日往復約26キロ移動。<br>
                                     太ももが競輪選手のようになる。
                                 </td>
                             </tr>
                             <tr>
-                                <td>2011年4月~(大学時代)</td>
+                                <td>
+                                    2011年4月~<br>
+                                    大学時代
+                                </td>
                                 <td>
                                     サークルでゴスペルを練習する毎日。<br>
                                     大学4年の時、ある精神科医との出会いを機に、精神保健福祉士を志す。
                                 </td>
                             </tr>
                             <tr class="table-success">
-                                <td>2015年4月~(専門学校時代)</td>
+                                <td>
+                                    2015年4月~<br>
+                                    専門学校時代
+                                </td>
                                 <td>精神保健福祉士取得のため、勉強や実習に明け暮れる。<br>
                                     病院の患者さんたちの現状に衝撃を受ける。
                                 </td>
                             </tr>
                             <tr>
-                                <td>2016年4月~(就職)</td>
+                                <td>
+                                    2016年4月~<br>
+                                    就職
+                                </td>
                                 <td>精神科病院で勤務。うつ病や統合失調症など様々な患者と向き合う毎日。</td>
                             </tr>
                             <tr class="table-success">
-                                <td>2020年6月~(転職)</td>
+                                <td>
+                                    2020年6月~<br>
+                                    転職
+                                </td>
                                 <td>
                                     地域活動支援センターで、指導員として勤務。<br>
                                     利用者の障害特性を配慮しながら、余暇の場所づくりを研究する毎日。
                                 </td>
                             </tr>
                             <tr>
-                                <td>2021年8月末(退職)</td>
+                                <td>2021年8月末<br>
+                                    退職
+                                </td>
                                 <td>
                                     医療福祉業界を経験してきた中で、DX化を推進する仕事に興味を持つ。<br>
                                     Webエンジニアへの転職を決意。
                                 </td>
                             </tr>
                             <tr class="table-success">
-                                <td>2021年12月末~</td>
+                                <td>2021年12月~</td>
                                 <td>侍エンジニア塾を受講開始。</td>
                             </tr>
                         </table>
