--- a/index_English.html
+++ b/index_English.html
@@ -302,7 +302,7 @@
                 <p>If you have any comments about this site or me, please use the form below.</p>
                 
                 <form action="submit" method="POST">
-                    Name: <input type="text" name="name" placeholder="田中  太郎"/><br><br>
+                    Name: <input type="text" name="name" placeholder="Taro Tanaka"/><br><br>
                     Email: <input type="email" name="email" placeholder="sample@gmail.com">
                     <p>Comment</p>
                     <textarea name="comment" id="comment" cols="30" rows="10"></textarea><br>
