モーダルウィンドウ、スクロールイベント再調整

--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
                 
                 <div id="mask" class="hidden"></div>
                 <div id="modal" class="hidden">
+                    <div id="close_2">閉じる</div>
                     <p><a href="">1. アニメーション(jQuery)</a></p>
                     <p><a href="">2. 新規ユーザー登録アプリ(PHP, MySQL)</a></p>
-                    <p><a href="">3. 相談記録アプリ(PHP, MySQL)</a></p>
-                    <div id="close_2">
-                        Close
-                    </div>
+                    <p><a href="">3. facebookもどきのアプリ(PHP, MySQL)</a></p>
+                    <p><a href="">4. 相談記録アプリ(PHP, MySQL)</a></p>
                 </div>
             </div>
             
