--- a/index_English.html
+++ b/index_English.html
@@ -106,12 +106,11 @@
                 
                 <div id="mask" class="hidden"></div>
                 <div id="modal" class="hidden">
+                    <div id="close_2">Close</div>
                     <p><a href="">1. Animation (jQuery)</a></p>
                     <p><a href="">2. New user registration application (PHP, MySQL)</a></p>
-                    <p><a href="">3. Consultation record application <br>(PHP, MySQL)</a></p>
-                    <div id="close_2">
-                        Close
-                    </div>
+                    <p><a href="">3. Facebook-like application<br>(PHP, MySQL)</a></p>
+                    <p><a href="">4. Consultation record application<br>(PHP, MySQL)</a></p>
                 </div>
             </div>
             
