スクロールイベント、footer修正、githubのlinkを追加

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <p>Webエンジニアへの転職を志す。</p>
                 <p>2021年12月より侍エンジニアを受講開始。</p><br>
                 <p id="git">GitHubのURLはこちらをクリック↓↓</p>
-                <a href="#"><div class="box"></div></a>
+                <a href="https://github.com/kazuma9976"><div class="box"></div></a>
             </div>
             
             <!--ポートフォリオサイトについて-->
@@ -311,8 +311,9 @@
             </div>
             <!--クリックしたらTop画面に戻る-->
             <div id="back">
-                <a href="index.html"><span class="material-icons">arrow_circle_up</span></a>
+                <br>
                 <p>Thank you for comming !!</p>
+                <a href="index.html"><span class="material-icons">arrow_circle_up</span></a>
             </div>
             <!--フッタータグ-->
             <footer>
