--- a/index_English.html
+++ b/index_English.html
@@ -92,7 +92,7 @@
                 <p>I wanted to change my career to become a web engineer.</p>
                 <p>I began attending the Samurai Engineer School in December 2021.</p><br>
                 <p id="git">Click here for my GitHub URL↓↓</p>
-                <a href="#"><div class="box"></div></a>
+                <a href="https://github.com/kazuma9976"><div class="box"></div></a>
             </div>
             
             <!--My portfolio-->
@@ -314,8 +314,9 @@
             
             <!--Return to the top screen.-->
             <div id="back">
-                <a href="index.html"><span class="material-icons">arrow_circle_up</span></a>
+                <br>
                 <p>Thank you for comming !!</p>
+                <a href="index.html"><span class="material-icons">arrow_circle_up</span></a>
             </div>
             <!--Footer-->
             <footer>
